# cshark_test

./: .gitmodules  CMakeLists.txt  README.md  firmware_metadata.h.in  iuart.hpp  main.cpp  sensor.cpp  sensor.hpp  sensorEmulation.py  sensor_ut.cpp  stm32g431rbtx_flash.ld  uart_mock.hpp  uart_stm32.cpp  uart_stm32.hpp
cmake/: emka_defaults.cmake  emka_macros.cmake  gcc-arm-none-eabi.cmake  template.cmake
dbg_led/: dbg_led.c  dbg_led.h
drivers/: CMakeLists.txt
freeRTOS_config/: FreeRTOSConfig.h
inc/: core_clock.h  core_lpuart.h  core_main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
src/: core_clock.c  core_lpuart.c  core_main.c  stm32g4xx_it.c  syscalls.c  system_stm32g4xx.c
tests/: CMakeLists.txt  template_test.cpp
